
DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move
- Generic templates now display a usage string.
- When creating a new template, associate the new template with the default design.

News v2.50.5
- Minor fix to add category.

FileManager v1.6
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)

Search
- Convert to store all data using the InnoDB engine
- Use transactions for the addwords and deletewords stuff for performance.
- Fix problem with query and record expiry.

AdminSearch v1.0.1
- Fixes problem with use of 'Use Admin Search' permission.

ModuleManager
- Now detect if module_custom directories exist and are populated and warn about this before upgrading a module.
- Minor string changes.

Version 2.1.3 - Black Point
----------------------------------
Core - General
  - Security fix to prevent HTTP_HOST attacks. Many thanks to I-TRACING (www.i-tracing.com) for reporting it!!
  - Remove stub .htaccess files from subdirectories
  - Update the included sample htaccess.txt file for security
  - Fix for endless loop when calculating a page alias in utf-8 environments
  - Fix for endless loop when calculating a page alias and a page name/title ended with -
  - Fixes a notice on the login page
  - Optimize LoadContentFromId() to be typesafe, and use default page, if the id passed in is invalid
  - Fix error condition if there were no default default design, or default page template
  - Fix problem with system verification.
