@@ -24,20 +24,24 @@ if( !$this->VisibleToAdminUser() ) return;
 $filter_tpl_rec = array('tpl'=>'','limit'=>100,'offset'=>0,'sortby'=>'name','sortorder'=>'asc');
 $filter_css_rec = array('limit'=>100,'offset'=>0,'sortby'=>'name','sortorder'=>'asc','design'=>'');
 if( isset($params['submit_filter_tpl']) ) {
-	$filter_tpl_rec['tpl'] = $params['filter_tpl'];
-	$filter_tpl_rec['sortby'] = trim($params['filter_sortby']);
-	$filter_tpl_rec['sortorder'] = trim($params['filter_sortorder']);
-	$filter_tpl_rec['limit'] = (int)$params['filter_limit_tpl'];
-	$filter_tpl_rec['limit'] = max(2,min(100,$filter_tpl_rec['limit']));
-	unset($_SESSION[$this->GetName().'tpl_page']);
+    if( $params['submit_filter_tpl'] == 1 ) {
+        $filter_tpl_rec['tpl'] = $params['filter_tpl'];
+        $filter_tpl_rec['sortby'] = trim($params['filter_sortby']);
+        $filter_tpl_rec['sortorder'] = trim($params['filter_sortorder']);
+        $filter_tpl_rec['limit'] = (int)$params['filter_limit_tpl'];
+        $filter_tpl_rec['limit'] = max(2,min(100,$filter_tpl_rec['limit']));
+    }
+    unset($_SESSION[$this->GetName().'tpl_page']);
     cms_userprefs::set($this->GetName().'template_filter',serialize($filter_tpl_rec));
 }
 else if( isset($params['submit_filter_css']) ) {
-	$this->SetCurrentTab('stylesheets');
-	$filter_css_rec['design'] = trim($params['filter_css_design']);
-	$filter_css_rec['sortby'] = trim($params['filter_css_sortby']);
-	$filter_css_rec['sortorder'] = trim($params['filter_css_sortorder']);
-	$filter_css_rec['limit'] = max(2,min(100,(int)$params['filter_limit_css']));
+    if( $params['submit_filter_css'] == 1 ) {
+        $filter_css_rec['design'] = trim($params['filter_css_design']);
+        $filter_css_rec['sortby'] = trim($params['filter_css_sortby']);
+        $filter_css_rec['sortorder'] = trim($params['filter_css_sortorder']);
+        $filter_css_rec['limit'] = max(2,min(100,(int)$params['filter_limit_css']));
+    }
+    $this->SetCurrentTab('stylesheets');
 	unset($_SESSION[$this->GetName().'tpl_page']);
     cms_userprefs::set($this->GetName().'css_filter',serialize($filter_css_rec));
 }
